--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,13 @@
     <body>
         <h1>BLocks</h1>
 
+        <form>
+            <legend>New Block</legend>
+            <input name="name" placeholder="Name"</br>
+            <input name="description" placeholder="Description">
+            <input type="Submit">
+        </form>
+
         <ul class="block-list"></ul>
 
         <script src="jquery-3.2.1.min.js"></script>
